[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/menu_main/menu_main.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 340.0
margin_right = 460.0
margin_bottom = 600.0
custom_constants/separation = 25
alignment = 1

[node name="start_game" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 230.0
margin_right = 120.0
margin_bottom = 260.0
rect_min_size = Vector2( 120, 30 )
text = "Start Game"

[node name="load_options" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 285.0
margin_right = 120.0
margin_bottom = 315.0
rect_min_size = Vector2( 120, 30 )
text = "Options"

[node name="exit_program" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 340.0
margin_right = 120.0
margin_bottom = 370.0
rect_min_size = Vector2( 120, 30 )
text = "Exit Program"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/start_game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/load_options" to="." method="_on_load_options_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/exit_program" to="." method="_on_exit_program_pressed"]
